# streamslate

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .prettierignore  .versionrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  agents.md  cypress.config.ts  eslint.config.js  fix-build-issues-plan.md  git-tunes-test.txt  imp_plan.md  index.html  itch_description.md  package-lock.json  package.json  release-please-config.json  research-tauri-release-automation.md  run_jobs.json  setup.sh  streamslate.code-workspace  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-please.yml  release.yml  security.yml
.husky/: commit-msg  pre-commit  pre-push
.loom/: 00-index.md  00-mcp-inventory.md  00-workspace-snapshot.md  10-research.md  20-product-spec.md  30-implementation-plan.md  40-decisions.md  50-worklog.md
cypress/: tsconfig.json
cypress/e2e/: annotations-edit.cy.ts  app.cy.ts  integration-websocket.cy.ts  pdf-viewer.cy.ts  settings.cy.ts  sidebar.cy.ts  workflow.cy.ts
cypress/support/: e2e.ts
docs/: README.md  api.md  code-signing-setup.md  fix-macos-notarization.md  getting-started.mdx  git-hooks.md  itch-profile-v1.0.md  manual-verification-checklist.md  release-readiness-1.0.md  roadmap-reconciliation-2026-02-12.md  roadmap-reconciliation-2026-02-14.md  roadmap-reconciliation-2026-02-15.md  roadmap-reconciliation-2026-02-16.md  roadmap-reconciliation-2026-02-19.md  roadmap-reconciliation-2026-02-20.md  roadmap-reconciliation-2026-02-23.md  roadmap-reconciliation-2026-02-24.md  roadmap-reconciliation-2026-02-25.md  roadmap-reconciliation-2026-02-26.md  roadmap-reconciliation-2026-02-27.md  roadmap-reconciliation-2026-03-01.md  roadmap-reconciliation-2026-03-03.md  roadmap-reconciliation-2026-03-04.md  roadmap-reconciliation-2026-03-05.md  roadmap-reconciliation-2026-03-06.md  roadmap-reconciliation-2026-03-07.md  roadmap-reconciliation-2026-03-08.md  roadmap-reconciliation-2026-03-09.md  roadmap-reconciliation-2026-03-11.md  roadmap-reconciliation-2026-03-12.md  roadmap-reconciliation-2026-03-13.md  roadmap-reconciliation-2026-03-14.md
docs/client/: index.html
docs/design/: ndi_syphon_implementation.md
docs/plugins/: manifest.json  test_plugin.js
internal/: README.md  development-setup.md
requirements/: README.md  arch-build.txt  fedora-build.txt  ubuntu-build.txt  ubuntu-dev.txt
scripts/: auto-fix-ts.cjs  build-macos-dmg.sh  build.sh  docker-smoke-test.sh  generate-update-key.sh  import-certificate.sh  normalize-windows-version.js  publish-update.sh  release-preflight.sh  setup-gitlab-runner.sh  sync-versions.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  errors.rs  lib.rs  main.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/commands/: annotations.rs  mod.rs  ndi.rs  pdf.rs  presenter.rs  websocket.rs
src-tauri/src/ndi/: mod.rs  sender.rs
src-tauri/src/security/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/syphon/: ffi.rs  mod.rs  server.rs  syphon_bridge.m
src-tauri/src/websocket/: handlers.rs  messages.rs  mod.rs  protocol.rs  server.rs
src/components/annotation/: AnnotationToolbar.tsx  AnnotationTools.tsx  TemplatePacks.tsx  TextAnnotationEditor.tsx  ToolSelector.tsx  ToolSettings.tsx
src/components/debug/: NDIControls.tsx
src/components/layout/: BorderlessUI.tsx  BorderlessWindowControls.tsx  Header.tsx  OutputControls.tsx  (+5 more)
src/hooks/: useAnnotationDraw.ts  useNDI.ts  usePDF.test.ts  usePDF.ts  useRemoteControl.ts  useSettingsSync.test.ts  useSettingsSync.ts  useTheme.ts  useViewModes.test.ts  useViewModes.ts
src/lib/: logger.ts
src/stores/: integration.store.test.ts  integration.store.ts  pdf.store.test.ts  pdf.store.ts
src/styles/: globals.css  layout-fix.css
src/test/: setup.ts
src/types/: integration.types.ts  pdf.types.ts
(+26 files in other folders)
