[package]
name = "streamslate"
version = "1.4.0" # x-release-please-version
description = "A desktop PDF-annotation app for live streamers and YouTubers"
authors = ["StreamSlate Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/streamslate/streamslate"
default-run = "streamslate"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-http = "2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# PDF parsing
lopdf = "0.32"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# NDI support (optional - requires NDI SDK installed)
grafton-ndi = { version = "0.9", optional = true }

# macOS-only dependencies
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5.0"
core-media-rs = "0.3"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# Enable NDI (Network Device Interface) output
# Requires NDI SDK: https://ndi.video/download-ndi-sdk/
# macOS: Install to /Library/NDI SDK for Apple
ndi = ["dep:grafton-ndi"]

# Enable Syphon output (macOS only, requires Syphon.framework in /Library/Frameworks)
syphon = []
